# flag-guesser

./: Cargo.toml  LICENSE  README.md  index.html
src/: app.rs  game.rs  home.rs  main.rs
static/: styles.css
