[package]
name = "flag-guesser"
version = "0.1.0"
authors = ["Dat Tram <dat_tram@outlook.com>"]
edition = "2021"

[dependencies]
yew = "0.19.3"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.32"
serde = "1.0.142"
js-sys = "0.3.59"
web-sys = "0.3.59"
serde_json = "1.0.83"
rand = "0.8.5"
getrandom = { version = "0.2.7", features = ["js"] }
